--- a/wallet/AndroidManifest.xml
+++ b/wallet/AndroidManifest.xml
@@ -3,10 +3,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 
-	package="hashengineering.quarkcoin.wallet"
+	package="hashengineering.dimecoin.wallet"
 	android:installLocation="internalOnly"
-	android:versionCode="10110"
-	android:versionName="0.1.10" >
+	android:versionCode="10100"
+	android:versionName="0.1.0" >
 
 
 	<uses-sdk
@@ -65,31 +65,14 @@
 		android:label="@string/app_name"
 		android:theme="@style/My.Theme" >
 
-        <!-- Splash screen -->
-        <activity
-                android:name="de.schildbach.wallet.ui.SplashScreen"
-                android:label="@string/app_name"
-                android:screenOrientation="landscape"
-                android:theme="@android:style/Theme.Black.NoTitleBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-		<activity
-			android:name="de.schildbach.wallet.ui.WalletActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:launchMode="singleTask" />
 
 		<activity-alias
 			android:name="de.schildbach.wallet.WalletActivity"
 			android:targetActivity="de.schildbach.wallet.ui.WalletActivity" >
 			<intent-filter>
-				<!--action android:name="android.intent.action.MAIN" /-->
+				<action android:name="android.intent.action.MAIN" />
 
-				<!--category android:name="android.intent.category.LAUNCHER" /-->
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.nfc.action.NDEF_DISCOVERED" />
