--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>apk</packaging>
 
 	<version>0.1.0</version>
-	<name>Quark Wallet</name>
+	<name>Dimecoin Wallet</name>
 
 	<parent>
 		<groupId>de.schildbach.wallet</groupId>
@@ -53,7 +53,7 @@
 		<!-- com.google.bitcoin.* -->
 		<dependency>
 			<groupId>com.google</groupId>
-			<artifactId>quarkcoinj</artifactId>
+			<artifactId>dimecoinj</artifactId>
 			<version>0.12-SNAPSHOT</version>
 		</dependency>
 
